# pipeline-feature-selection

./: README.md  pyproject.toml
pipeline_feature_selection/: main.py
pipeline_feature_selection/outputs/: final_features_result.csv  matrix_correlation.csv  missing_value.csv  random_forest.csv  shapley_value.csv  unique_value.csv  xgboost.csv
pipeline_feature_selection/outputs/examples/: deprecated_features.csv  drop_feature.csv  label_correlation.csv  matrix_correlation.csv  missing_values.csv  permutation_importance.csv  random_forest.csv  random_up_shapley.csv  shapley_value.csv  unique_value.csv  xgboost.csv
pipeline_feature_selection/strategies/: AutoML.py  DeprecatedFeatures.py  Dropfeature.py  FullPipeline.py  LabelCorrelation.py  MatrixCorrelation.py  MissingValues.py  PermutationImportance.py  RandomForest.py  RandomUpShapley.py  ShapleyBase.py  ShapleyValue.py  Strategy.py  UniqueValues.py  XGBoost.py
pipeline_feature_selection/utils/: deprecated_features_example.csv  extractor.py  strategies_utils.py
